# memestr

./: Cargo.toml
benches/: bench_str.rs
src/: lib.rs  macros.rs  str16.rs  str24.rs  str32.rs  str8.rs  strn.rs
