[package]
authors = ["Eliot Courtney <edgeworth.dev@gmail.com>"]
categories = ["data-structures"]
description = "small string library"
edition = "2021"
keywords = ["small", "string"]
license = "MIT OR Apache-2.0"
name = "memestr"
repository = "https://github.com/Edgeworth/memestr"
version = "0.1.0"

[dependencies]
derive_more = "0.99.17"
eyre = "0.6.7"
serde = {version = "1.0.136", features = ["derive"]}

# Build dependencies with optimisations - debug builds will run faster
# but dependencies don't change often.
[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = true
