[package]
authors = ["Eliot Courtney <edgeworth.dev@gmail.com>"]
categories = ["data-structures"]
description = "small string library"
edition = "2021"
keywords = ["small", "string"]
license = "MIT OR Apache-2.0"
name = "memestr"
repository = "https://github.com/Edgeworth/memestr"
version = "0.1.0"

[dependencies]
derive_more = "0.99.17"
eyre = "0.6.8"
serde = { version = "1.0.147", features = ["derive"] }

[dev-dependencies]
pretty_assertions = "1.3.0"
