[package]
authors = ["Eliot Courtney <edgeworth.dev@gmail.com>"]
categories = ["data-structures"]
description = "small string library"
edition = "2024"
keywords = ["small", "string"]
license = "MIT OR Apache-2.0"
name = "memestr"
repository = "https://github.com/Edgeworth/memestr"
version = "0.1.0"

[dependencies]
derive_more = {version = "2.0.1", features = ["display"]}
eyre = "0.6.12"
serde = {version = "1.0.218", features = ["derive"]}

[dev-dependencies]
criterion = {version = "0.5.1", features = ["real_blackbox", "html_reports"]}
pretty_assertions = "1.4.1"

[[bench]]
harness = false
name = "bench_str"
